--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "styled-components": "^3.3.3",
+    "styled-normalize": "^8.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
