--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
+    "ramda": "^0.25.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
